# fixed-containers

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  LookUpBenchmark.h  RandomLookUpBenchmark.h  enum_map_benchmark.cpp  enum_map_construct_benchmark.cpp  enum_set_benchmark.cpp  enum_set_construct_benchmark.cpp  fixed_map_benchmark.cpp  fixed_map_perf_test.cpp  map_benchmark.cpp  map_insert_benchmark.cpp  set_benchmark.cpp  small_map_benchmark.cpp  small_set_benchmark.cpp  small_vector_benchmark.cpp  vector_benchmark.cpp  vector_push_back_benchmark.cpp
cmake/: CMakeOptions.cmake  CPM.cmake  ProjectOptions.cmake
include/fixed_containers/: bidirectional_iterator.hpp  bit_set.hpp  comparison_chain.hpp  enum_map.hpp  enum_set.hpp  enum_utils.hpp  fixed_circular_buffer.hpp  fixed_deque.hpp  fixed_red_black_tree.hpp  fixed_red_black_tree_types.hpp  fixed_robinhood_hashtable.hpp  fixed_string.hpp  fixed_vector.hpp  index_range_predicate_iterator.hpp  optional_storage.hpp  pair_view.hpp  random_access_iterator_transformer.hpp
test/: CMakeLists.txt  enum_map_test.cpp  enum_set_test.cpp  enum_utils_test.cpp  fixed_circular_buffer_test.cpp  fixed_string_test.cpp  macro_countermeasures_test.cpp  optional_reference_test.cpp  pair_view_test.cpp  string_literal_test.cpp
