find_package(range-v3 CONFIG REQUIRED)
find_package(GTest CONFIG REQUIRED)

macro(add_test_dependencies TEST_TARGET)
    target_link_system_libraries(${TEST_TARGET} PRIVATE range-v3::meta range-v3::concepts range-v3::range-v3)
    target_link_system_libraries(${TEST_TARGET} PRIVATE GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
    target_link_libraries(${TEST_TARGET} PRIVATE fixed_containers project_options)
    add_test(NAME ${TEST_TARGET} COMMAND ${TEST_TARGET})
endmacro()


add_executable(circular_indexing_test circular_indexing_test.cpp)
add_test_dependencies(circular_indexing_test)
add_executable(circular_integer_range_iterator_test circular_integer_range_iterator_test.cpp)
add_test_dependencies(circular_integer_range_iterator_test)
add_executable(comparison_chain_test comparison_chain_test.cpp)
add_test_dependencies(comparison_chain_test)
add_executable(concepts_test concepts_test.cpp)
add_test_dependencies(concepts_test)
add_executable(enum_array_test enum_array_test.cpp)
add_test_dependencies(enum_array_test)
add_executable(enum_map_test enum_map_test.cpp)
add_test_dependencies(enum_map_test)
add_executable(enum_set_test enum_set_test.cpp)
add_test_dependencies(enum_set_test)
add_executable(enum_utils_test enum_utils_test.cpp)
add_test_dependencies(enum_utils_test)
add_executable(filtered_integer_range_iterator_test filtered_integer_range_iterator_test.cpp)
add_test_dependencies(filtered_integer_range_iterator_test)
add_executable(fixed_circular_deque_test fixed_circular_deque_test.cpp)
add_test_dependencies(fixed_circular_deque_test)
add_executable(fixed_circular_queue_test fixed_circular_queue_test.cpp)
add_test_dependencies(fixed_circular_queue_test)
add_executable(fixed_deque_test fixed_deque_test.cpp)
add_test_dependencies(fixed_deque_test)
add_executable(fixed_doubly_linked_list_test fixed_doubly_linked_list_test.cpp)
add_test_dependencies(fixed_doubly_linked_list_test)
add_executable(fixed_list_test fixed_list_test.cpp)
add_test_dependencies(fixed_list_test)
add_executable(fixed_map_test fixed_map_test.cpp)
add_test_dependencies(fixed_map_test)
add_executable(fixed_map_perf_test fixed_map_perf_test.cpp)
add_test_dependencies(fixed_map_perf_test)
add_executable(fixed_red_black_tree_test fixed_red_black_tree_test.cpp)
add_test_dependencies(fixed_red_black_tree_test)
add_executable(fixed_red_black_tree_view_test fixed_red_black_tree_view_test.cpp)
add_test_dependencies(fixed_red_black_tree_view_test)
add_executable(fixed_set_test fixed_set_test.cpp)
add_test_dependencies(fixed_set_test)
add_executable(fixed_robinhood_hashtable_test fixed_robinhood_hashtable_test.cpp)
add_test_dependencies(fixed_robinhood_hashtable_test)
add_executable(fixed_unordered_map_test fixed_unordered_map_test.cpp)
add_test_dependencies(fixed_unordered_map_test)
add_executable(fixed_unordered_set_test fixed_unordered_set_test.cpp)
add_test_dependencies(fixed_unordered_set_test)
add_executable(fixed_stack_test fixed_stack_test.cpp)
add_test_dependencies(fixed_stack_test)
add_executable(fixed_queue_test fixed_queue_test.cpp)
add_test_dependencies(fixed_queue_test)
add_executable(fixed_string_test fixed_string_test.cpp)
add_test_dependencies(fixed_string_test)
add_executable(fixed_vector_test fixed_vector_test.cpp)
add_test_dependencies(fixed_vector_test)
add_executable(in_out_test in_out_test.cpp)
add_test_dependencies(in_out_test)
add_executable(instance_counter_test instance_counter_test.cpp)
add_test_dependencies(instance_counter_test)
add_executable(int_math_test int_math_test.cpp)
add_test_dependencies(int_math_test)
add_executable(integer_range_iterator_test integer_range_iterator_test.cpp)
add_test_dependencies(integer_range_iterator_test)
add_executable(integer_range_test integer_range_test.cpp)
add_test_dependencies(integer_range_test)
add_executable(macro_countermeasures_test macro_countermeasures_test.cpp)
add_test_dependencies(macro_countermeasures_test)
add_executable(memory_test memory_test.cpp)
add_test_dependencies(memory_test)
add_executable(out_test out_test.cpp)
add_test_dependencies(out_test)
add_executable(pair_test pair_test.cpp)
add_test_dependencies(pair_test)
add_executable(pair_view_test pair_view_test.cpp)
add_test_dependencies(pair_view_test)
add_executable(queue_adapter_test queue_adapter_test.cpp)
add_test_dependencies(queue_adapter_test)
add_executable(reflection_test reflection_test.cpp)
add_test_dependencies(reflection_test)
add_executable(stack_adapter_test stack_adapter_test.cpp)
add_test_dependencies(stack_adapter_test)
add_executable(string_literal_test string_literal_test.cpp)
add_test_dependencies(string_literal_test)
add_executable(tuples_test tuples_test.cpp)
add_test_dependencies(tuples_test)
add_executable(type_name_test type_name_test.cpp)
add_test_dependencies(type_name_test)

add_executable(enum_map_bit_set_test enum_map_test.cpp)
target_compile_definitions(enum_map_bit_set_test PRIVATE USE_BIT_SET_IN_ENUM_MAP)
add_test_dependencies(enum_map_bit_set_test)

#add_executable(enum_set_bit_set_test enum_set_test.cpp)
#target_compile_definitions(enum_set_bit_set_test PRIVATE USE_BIT_SET_FOR_ENUM_SET)
#add_test_dependencies(enum_set_bit_set_test)
